test/Fail/Issue2101.err
Issue2101.agda:27.31-32: error: [UnequalTypes]
The type
  B
is not a subtype of
  Wrap _A_5
when checking that the expression b has type Wrap _A_5
